@@ -89,6 +89,7 @@ t/t108tga.t
 t/t15color.t
 t/t16matrix.t           Tests Imager::Matrix2d
 t/t20fill.t             Tests fills
+t/t21draw.t             Basic drawing tests
 t/t30t1font.t
 t/t35ttfont.t
 t/t36oofont.t
